# yeoman-python-service-generator

./: .gitignore  Makefile  README.md  package.json
.chglog/: CHANGELOG.tpl.md  config.yml
.dependabot/: config.yml
.github/: dependabot.yml
generators/app/: index.js
generators/app/templates/: .gitignore  Makefile  pyproject.toml
generators/app/templates/.chglog/: CHANGELOG.tpl.md  config.yml
generators/app/templates/src/<%= package %>/: __init__.py
generators/app/templates/test/: test_<%= package %>.py
