[tool.poetry]
name = "<%= package %>"
version = "<%= version %>"
description = "<%= description %>"
authors = ["<%= author %>"]

[tool.poetry.dependencies]
python = "^3.8"
pydantic = "^1.4"

[tool.poetry.dev-dependencies]
pytest = "^5.3"
flake8 = "^3.7"
pytest-cov = "^2.8"
pytest-mock = "^2.0"
factory_boy = "^2.12"
ipdb = "*"

[build-system]
requires = ["poetry>=1.0"]
build-backend = "poetry.masonry.api"
